added photo for test purposes

--- a/index.html
+++ b/index.html
@@ -61,21 +61,23 @@
       </div>
     </div>
   </header>
-  <main>
+  <main id="main">
 
     <div class="section-cards">
-      <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, aliquam vel eius perspiciatis non, mollitia ex suscipit voluptatem tempora quo excepturi consectetur natus ducimus nobis, voluptate earum nostrum facilis enim?</div>
+      <div class="cards-wrap">
+      <div class="card"><img class="card-photo" src="assets/images/photo.JPG" alt=""></div>
       <div class="card"><p class="text"> <span class="bold">Minoltor</span>, c'est l'atelier de réparation et d'entretien de matériel argentique de <span class="bold">Julien Mathé</span>, basé à <span class="bold">Rezé</span></p>
          <p class="text">
 Passionné par les appareils photo argentiques depuis quelques années, la réparation est rapidement apparue comme une étape de plus pour se plonger dans ce monde captivant. Grâce à l'aide de nombreuse personnes expertes sur des forums et à diverses documentations, Julien a pu acquerir des compétences qui lui permettent aujourd'hui de mettre ses services à disposition de personne qui souhaitent redonner une seconde vie à leurs boitiers.
       </p>
     </div>
-
+  </div>
   </main>
-  <footer>
+  <footer id="footer">
     <h3 class="phone-number">06-40-40-40-40</h3>
-  </footer>
+    <h3>julien-mathé@gmail.com</h3>
 
+  </footer>
   <script src="index.js"></script>
 </body>
 </html>
