--- a/index.html
+++ b/index.html
@@ -10,33 +10,32 @@
 <div class="overlay"></div>
 
   <header id="home" class="section-home">
-<img class="home-image"  src="assets/images/minoltor-illustration.png" alt="">
-    <nav   class="navbar">
+    <nav class="navbar">
       <a tabindex="2" href="#home">
-      <svg class="logo-small" width="616" height="134" viewBox="0 0 616 134" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0_2_2)">
-          <path d="M140.753 3.67503C129.432 3.65907 118.12 3.64311 106.809 3.67503C106.379 3.67503 105.779 4.05804 105.599 4.3852C104.808 5.81352 67.8336 81.6182 67.8336 81.6182L66.8235 81.6501C66.8235 81.6501 71.6341 5.94918 71.7141 3.70695H35.3694C23.5279 46.6204 11.7063 89.4779 -0.125244 132.343C-0.0852389 132.351 0.0147699 132.407 0.104782 132.407C8.08582 132.415 25.068 132.439 25.068 132.439C27.0783 124.587 49.1312 35.0661 49.1312 35.0661H50.2713L45.2907 132.391H57.5823L105.889 35.0582H107.149C107.149 35.0582 77.975 131.019 77.5449 132.367H105.469C117.31 89.4221 129.122 46.5805 140.933 3.75483C140.843 3.71493 140.793 3.68302 140.743 3.68302L140.753 3.67503Z" fill="black"/>
-          <path d="M265.319 32.6643C263.619 27.5016 258.268 23.3124 251.838 22.4028C242.626 21.1021 234.945 23.1768 228.635 28.0442C225.304 30.6136 222.484 34.2443 220.284 37.444L218.773 37.4281C220.204 32.6723 221.614 27.9644 223.074 23.0731H221.004C213.183 23.0731 195.16 23.0731 195.16 23.0731C195.16 23.0731 176.658 90.5951 167.637 123.478C166.827 126.431 165.946 129.375 165.086 132.375H193.11C193.25 131.881 193.37 131.434 193.49 130.995C199.981 107.136 206.462 83.2699 212.973 59.4114C214.063 55.4297 215.213 51.4479 218.243 48.0407C220.984 44.9606 224.644 43.0456 229.885 43.3089C234.105 43.5164 236.296 45.1681 236.286 48.3519C236.286 49.9079 235.946 51.4719 235.526 52.988C229.175 75.9448 222.774 98.8937 216.393 121.843C215.423 125.33 214.473 128.817 213.493 132.351C213.893 132.383 214.153 132.423 214.423 132.423C223.064 132.423 231.695 132.407 240.336 132.447C241.476 132.447 241.596 132.048 241.786 131.362C249.417 103.49 257.068 75.6256 264.729 47.7614C266.1 42.7823 267.01 37.8031 265.309 32.6564L265.319 32.6643Z" fill="black"/>
-          <path d="M350.15 37.1727C347.61 29.5843 341.649 24.4615 331.378 22.5464C324.757 21.3176 318.116 21.2298 311.495 21.8841C302.524 22.7778 295.093 25.7222 289.523 31.1083C284.362 36.0955 280.981 41.7928 278.231 47.7614C273.1 58.8927 269.73 70.4071 266.96 82.0571C264.959 90.4833 263.549 98.9814 263.789 107.99C264.069 111.749 264.609 115.842 266.37 119.816C268.99 125.752 273.721 130.253 281.772 132.375C286.152 133.532 290.643 133.947 295.213 133.971C308.445 134.035 318.986 130.293 326.537 122.17C331.488 116.839 335.009 110.951 337.669 104.751C344.75 88.2172 349.79 71.2928 351.591 53.7779C352.161 48.2562 351.991 42.6785 350.15 37.1807V37.1727ZM317.286 113.704C313.946 114.095 310.715 113.273 308.305 110.392C305.265 106.761 303.644 102.756 302.244 98.7181C297.914 86.2782 294.333 73.7265 292.033 61.0232C291.213 56.4989 290.603 51.9347 291.403 47.4024C291.883 44.6654 293.663 41.4018 298.414 40.9869C304.124 40.4922 306.815 43.3328 308.435 46.0219C310.055 48.711 313.716 57.5363 315.486 63.2336C319.026 74.6122 321.987 86.0547 323.547 97.6329C323.977 100.865 326.797 112.594 317.286 113.696V113.704Z" fill="black"/>
-          <path d="M542.206 37.1727C539.665 29.5843 533.704 24.4615 523.433 22.5464C516.812 21.3176 510.171 21.2298 503.55 21.8841C494.579 22.7778 487.148 25.7222 481.578 31.1083C476.417 36.0955 473.037 41.7928 470.286 47.7614C465.156 58.8927 461.785 70.4071 459.015 82.0571C457.014 90.4833 455.604 98.9814 455.844 107.99C456.124 111.749 456.664 115.842 458.425 119.816C461.045 125.752 465.776 130.253 473.827 132.375C478.207 133.532 482.698 133.947 487.268 133.971C500.5 134.035 511.041 130.293 518.592 122.17C523.543 116.839 527.064 110.951 529.724 104.751C536.805 88.2172 541.846 71.2928 543.646 53.7779C544.216 48.2562 544.046 42.6785 542.206 37.1807V37.1727ZM509.341 113.704C506.001 114.095 502.77 113.273 500.36 110.392C497.32 106.761 495.699 102.756 494.299 98.7181C489.969 86.2782 486.388 73.7265 484.088 61.0232C483.268 56.4989 482.658 51.9347 483.458 47.4024C483.938 44.6654 485.718 41.4018 490.469 40.9869C496.18 40.4922 498.87 43.3328 500.49 46.0219C502.11 48.711 505.771 57.5363 507.541 63.2336C511.082 74.6122 514.042 86.0547 515.602 97.6329C516.042 100.865 518.853 112.594 509.341 113.696V113.704Z" fill="black"/>
-          <path d="M429.731 106.522C426.49 106.323 424.64 104.926 424.51 102.484C424.45 101.256 424.59 99.9948 424.92 98.8059C427.051 91.2095 434.992 64.223 441.862 40.931H463.625L469.116 23.105H447.133C450.504 11.7024 452.874 3.70696 452.874 3.70696L425.34 3.69099C425.34 3.69099 423.08 11.6385 419.81 23.105H412.179L406.688 40.931H414.729C407.948 64.7337 399.917 92.8931 397.117 102.644C395.606 107.91 394.346 113.177 395.166 118.699C396.257 126.032 401.907 131.059 411.418 132.671C420.34 134.179 435.452 132.423 439.002 131.027C439.812 125.29 440.772 118.571 441.672 112.85C442.092 110.201 442.643 107.567 443.183 104.671C442.503 104.862 433.951 106.777 429.741 106.522H429.731Z" fill="black"/>
-          <path d="M379.254 3.69099C379.254 3.69099 351.351 103.825 345.91 123.407C345.08 126.399 343.13 132.431 343.13 132.431H371.343L406.948 3.72292L379.264 3.69897L379.254 3.69099Z" fill="black"/>
-          <path d="M605.624 22.5145C599.503 23.1848 595.173 25.9217 591.602 29.4885C588.862 32.2255 584.471 40.931 581.861 45.3117L580.611 45.2559C582.521 39.1037 585.291 29.3209 587.221 23.1209H565.039C554.967 59.6109 544.926 95.9812 534.885 132.351H564.419C565.769 126.79 567.019 121.284 568.459 115.81C572.75 99.4762 577.08 83.1582 581.451 66.8403C582.541 62.7707 583.921 58.7651 586.991 55.286C589.182 52.8044 592.272 51.3522 596.273 51.2405C599.553 51.1527 602.864 51.3202 606.224 51.3761C609.354 42.1918 612.585 32.7042 615.835 23.1528C612.455 22.307 609.024 22.1315 605.614 22.4985L605.624 22.5145Z" fill="black"/>
-          <path d="M149.304 35.6087C139.263 72.0269 132.142 95.9333 122.091 132.375H149.524C159.596 95.8854 166.727 72.0109 176.768 35.6087H149.304Z" fill="black"/>
-          <path d="M170.639 26.4601C180.065 24.5459 186.09 17.9255 184.095 11.6731C182.101 5.42075 172.842 1.90399 163.416 3.81822C153.989 5.73245 147.965 12.3528 149.959 18.6052C151.954 24.8576 161.212 28.3743 170.639 26.4601Z" fill="black"/>
-        </g>
-        <defs>
-          <clipPath id="clip0_2_2">
-            <rect width="616" height="134" fill="white"/>
-          </clipPath>
-        </defs>
-      </svg>
-    </a>
+        <svg class="logo-small" width="616" height="134" viewBox="0 0 616 134" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_2_2)">
+            <path d="M140.753 3.67503C129.432 3.65907 118.12 3.64311 106.809 3.67503C106.379 3.67503 105.779 4.05804 105.599 4.3852C104.808 5.81352 67.8336 81.6182 67.8336 81.6182L66.8235 81.6501C66.8235 81.6501 71.6341 5.94918 71.7141 3.70695H35.3694C23.5279 46.6204 11.7063 89.4779 -0.125244 132.343C-0.0852389 132.351 0.0147699 132.407 0.104782 132.407C8.08582 132.415 25.068 132.439 25.068 132.439C27.0783 124.587 49.1312 35.0661 49.1312 35.0661H50.2713L45.2907 132.391H57.5823L105.889 35.0582H107.149C107.149 35.0582 77.975 131.019 77.5449 132.367H105.469C117.31 89.4221 129.122 46.5805 140.933 3.75483C140.843 3.71493 140.793 3.68302 140.743 3.68302L140.753 3.67503Z" fill="black"/>
+            <path d="M265.319 32.6643C263.619 27.5016 258.268 23.3124 251.838 22.4028C242.626 21.1021 234.945 23.1768 228.635 28.0442C225.304 30.6136 222.484 34.2443 220.284 37.444L218.773 37.4281C220.204 32.6723 221.614 27.9644 223.074 23.0731H221.004C213.183 23.0731 195.16 23.0731 195.16 23.0731C195.16 23.0731 176.658 90.5951 167.637 123.478C166.827 126.431 165.946 129.375 165.086 132.375H193.11C193.25 131.881 193.37 131.434 193.49 130.995C199.981 107.136 206.462 83.2699 212.973 59.4114C214.063 55.4297 215.213 51.4479 218.243 48.0407C220.984 44.9606 224.644 43.0456 229.885 43.3089C234.105 43.5164 236.296 45.1681 236.286 48.3519C236.286 49.9079 235.946 51.4719 235.526 52.988C229.175 75.9448 222.774 98.8937 216.393 121.843C215.423 125.33 214.473 128.817 213.493 132.351C213.893 132.383 214.153 132.423 214.423 132.423C223.064 132.423 231.695 132.407 240.336 132.447C241.476 132.447 241.596 132.048 241.786 131.362C249.417 103.49 257.068 75.6256 264.729 47.7614C266.1 42.7823 267.01 37.8031 265.309 32.6564L265.319 32.6643Z" fill="black"/>
+            <path d="M350.15 37.1727C347.61 29.5843 341.649 24.4615 331.378 22.5464C324.757 21.3176 318.116 21.2298 311.495 21.8841C302.524 22.7778 295.093 25.7222 289.523 31.1083C284.362 36.0955 280.981 41.7928 278.231 47.7614C273.1 58.8927 269.73 70.4071 266.96 82.0571C264.959 90.4833 263.549 98.9814 263.789 107.99C264.069 111.749 264.609 115.842 266.37 119.816C268.99 125.752 273.721 130.253 281.772 132.375C286.152 133.532 290.643 133.947 295.213 133.971C308.445 134.035 318.986 130.293 326.537 122.17C331.488 116.839 335.009 110.951 337.669 104.751C344.75 88.2172 349.79 71.2928 351.591 53.7779C352.161 48.2562 351.991 42.6785 350.15 37.1807V37.1727ZM317.286 113.704C313.946 114.095 310.715 113.273 308.305 110.392C305.265 106.761 303.644 102.756 302.244 98.7181C297.914 86.2782 294.333 73.7265 292.033 61.0232C291.213 56.4989 290.603 51.9347 291.403 47.4024C291.883 44.6654 293.663 41.4018 298.414 40.9869C304.124 40.4922 306.815 43.3328 308.435 46.0219C310.055 48.711 313.716 57.5363 315.486 63.2336C319.026 74.6122 321.987 86.0547 323.547 97.6329C323.977 100.865 326.797 112.594 317.286 113.696V113.704Z" fill="black"/>
+            <path d="M542.206 37.1727C539.665 29.5843 533.704 24.4615 523.433 22.5464C516.812 21.3176 510.171 21.2298 503.55 21.8841C494.579 22.7778 487.148 25.7222 481.578 31.1083C476.417 36.0955 473.037 41.7928 470.286 47.7614C465.156 58.8927 461.785 70.4071 459.015 82.0571C457.014 90.4833 455.604 98.9814 455.844 107.99C456.124 111.749 456.664 115.842 458.425 119.816C461.045 125.752 465.776 130.253 473.827 132.375C478.207 133.532 482.698 133.947 487.268 133.971C500.5 134.035 511.041 130.293 518.592 122.17C523.543 116.839 527.064 110.951 529.724 104.751C536.805 88.2172 541.846 71.2928 543.646 53.7779C544.216 48.2562 544.046 42.6785 542.206 37.1807V37.1727ZM509.341 113.704C506.001 114.095 502.77 113.273 500.36 110.392C497.32 106.761 495.699 102.756 494.299 98.7181C489.969 86.2782 486.388 73.7265 484.088 61.0232C483.268 56.4989 482.658 51.9347 483.458 47.4024C483.938 44.6654 485.718 41.4018 490.469 40.9869C496.18 40.4922 498.87 43.3328 500.49 46.0219C502.11 48.711 505.771 57.5363 507.541 63.2336C511.082 74.6122 514.042 86.0547 515.602 97.6329C516.042 100.865 518.853 112.594 509.341 113.696V113.704Z" fill="black"/>
+            <path d="M429.731 106.522C426.49 106.323 424.64 104.926 424.51 102.484C424.45 101.256 424.59 99.9948 424.92 98.8059C427.051 91.2095 434.992 64.223 441.862 40.931H463.625L469.116 23.105H447.133C450.504 11.7024 452.874 3.70696 452.874 3.70696L425.34 3.69099C425.34 3.69099 423.08 11.6385 419.81 23.105H412.179L406.688 40.931H414.729C407.948 64.7337 399.917 92.8931 397.117 102.644C395.606 107.91 394.346 113.177 395.166 118.699C396.257 126.032 401.907 131.059 411.418 132.671C420.34 134.179 435.452 132.423 439.002 131.027C439.812 125.29 440.772 118.571 441.672 112.85C442.092 110.201 442.643 107.567 443.183 104.671C442.503 104.862 433.951 106.777 429.741 106.522H429.731Z" fill="black"/>
+            <path d="M379.254 3.69099C379.254 3.69099 351.351 103.825 345.91 123.407C345.08 126.399 343.13 132.431 343.13 132.431H371.343L406.948 3.72292L379.264 3.69897L379.254 3.69099Z" fill="black"/>
+            <path d="M605.624 22.5145C599.503 23.1848 595.173 25.9217 591.602 29.4885C588.862 32.2255 584.471 40.931 581.861 45.3117L580.611 45.2559C582.521 39.1037 585.291 29.3209 587.221 23.1209H565.039C554.967 59.6109 544.926 95.9812 534.885 132.351H564.419C565.769 126.79 567.019 121.284 568.459 115.81C572.75 99.4762 577.08 83.1582 581.451 66.8403C582.541 62.7707 583.921 58.7651 586.991 55.286C589.182 52.8044 592.272 51.3522 596.273 51.2405C599.553 51.1527 602.864 51.3202 606.224 51.3761C609.354 42.1918 612.585 32.7042 615.835 23.1528C612.455 22.307 609.024 22.1315 605.614 22.4985L605.624 22.5145Z" fill="black"/>
+            <path d="M149.304 35.6087C139.263 72.0269 132.142 95.9333 122.091 132.375H149.524C159.596 95.8854 166.727 72.0109 176.768 35.6087H149.304Z" fill="black"/>
+            <path d="M170.639 26.4601C180.065 24.5459 186.09 17.9255 184.095 11.6731C182.101 5.42075 172.842 1.90399 163.416 3.81822C153.989 5.73245 147.965 12.3528 149.959 18.6052C151.954 24.8576 161.212 28.3743 170.639 26.4601Z" fill="black"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_2_2">
+              <rect width="616" height="134" fill="white"/>
+            </clipPath>
+          </defs>
+        </svg>
+      </a>
       <ul class="list">
         <li class="item"><a tabindex="3" href="#contact">Contact</a></li>
-        <li class="item"><a tabindex="4" href="#faq">Tarifs</a></li>
+        <li class="item"><a tabindex="4" href="#tarif">Tarifs</a></li>
         <li class="item"><a tabindex="5" href="">Insta</a></li>
-        <li class="item faq-link"><a tabindex="4" href="#faq">FAQ</a></li>
+        <li class="item faq-link"><a tabindex="6" href="#faq">FAQ</a></li>
       </ul>
     </nav>
     <div class="title-wrap">
@@ -60,10 +59,11 @@
         </defs>
       </svg>
       <div class="subtitle-wrap">
-
-        <h3  class="subtitle">Réparation et entretien d'appareils photo <span class="bold">argentiques</span></h3>
+        <div class="floating"></div>
+        <h3  class="subtitle">Réparation et entretien <br> d'appareils photo <span class="bold">argentiques</span></h3>
       </div>
     </div>
+    <img class="home-image"  src="assets/images/minoltor-illustration.png" alt="">
 
   </header>
   <main id="main" >
@@ -73,9 +73,9 @@
         <div class="card">
           <img src="assets/images/julien-1.jpg" srcset="assets/images/julien-1@2x.jpg 2x" class="photo-card"  alt="">
         </div>
-        <div class="card"><p class="text"> <span class="bold">Minoltor</span>, c'est l'atelier de réparation et d'entretien de matériel argentique de <span class="bold">Julien Mathé</span>, basé à <span class="bold">Rezé</span></p>
+        <div class="card"><p class="text"> <span class="bold">Minoltor</span>, c'est l'atelier de réparation et d'entretien de matériel argentique de <span class="bold">Julien Mathé</span>, basé à <span class="bold">Nantes</span></p>
           <p class="text">
-            Passionné par les appareils photo argentiques depuis quelques années, la réparation est rapidement apparue comme une étape de plus pour se plonger dans ce monde captivant. Grâce à l'aide de nombreuse personnes expertes sur des forums et à diverses documentations, Julien a pu acquerir des compétences qui lui permettent aujourd'hui de mettre ses services à disposition de personne qui souhaitent redonner une seconde vie à leurs boitiers.
+            Passionné par les appareils photo argentiques depuis quelques années, la réparation est rapidement apparue comme une étape de plus pour se plonger dans ce monde captivant. Grâce à l'aide de nombreuse personnes expertes et à diverses documentations, Julien a pu acquerir des compétences qui lui permettent aujourd'hui de mettre ses services à disposition de personne qui souhaitent redonner une seconde vie à leurs boitiers.
           </p>
         </div>
       </section>
@@ -89,8 +89,33 @@
       </div>
     </div>
 
-    <secion class="section-tarifs">
+    <secion class="section-tarifs" id="tarif">
       <h2 class="section-title">Tarifs</h2>
+      <div class="tarif-wrap">
+        <div class="item">
+          <div class="circle"><span class="price">30€</span></div>
+          <h3 class="item-title">Boitiers</h3>
+          <ul class="details">
+            <li class="items">Révision</li>
+            <li class="items">Ajustements de vitesses et de cellule</li>
+            <li class="items">Réglage de télémètre</li>
+            <li class="items">Nettoyage</li>
+            <li class="items">Changement des joints d'étanchéité +15€</li>
+
+          </ul>
+        </div>
+
+        <div class="item">
+          <div class="circle"><span class="price">30€</span></div>
+          <h3 class="item-title">Objectif</h3>
+          <ul class="details">
+            <li class="items">Nettoyage</li>
+            <li class="items">Réglage de mise au point</li>
+            <li class="items">Nettoyage des lamelles gommées</li>
+            <li class="items">Élimination des champignons</li>
+          </ul>
+        </div>
+      </div>
     </secion>
 
     <section class="section-contact" id="contact">
@@ -98,7 +123,7 @@
         <div class="contact-wrap">
 
           <div class="contact-image-wrap">
-            <img src="assets/images/julien-2.jpg" srcset="assets/images/julien-2@2x.jpg" class="contact-image">
+            <img src="assets/images/camera-1.jpg" srcset="assets/images/camera-1@2x.jpg" class="contact-image">
           </div>
 
           <div class="content-wrap">
@@ -116,8 +141,8 @@
               </svg>
 
 
-            <a  class="email bold link" href=" mailto: minoltor@prontonmail.com"> minoltor@protonmail.com</a>
-            <span class="adresse">Ou venez me voir dans mon bel atelier situé à<span class="bold"> Rezé.</span></span>
+            <a  class="email bold link"  href=" mailto: minoltor@prontonmail.com"> minoltor@protonmail.com</a>
+            <span class="adresse">Ou venez me voir dans mon bel atelier situé à<span class="bold"> Nantes.</span></span>
           </div>
 
         </div>
@@ -129,7 +154,7 @@
   <div class="close"></div>
   <h2 class="section-title">faq</h2>
   <div class="faq-wrap">
-    <div tabindex="6" id="1" class="faq-item">
+    <div  id="1" class="faq-item">
       <div class="question">
         <h5 class="label">Comment ça va toi sinon ? </h5>
         <span class="plus-icon">+</span>
@@ -140,7 +165,7 @@
         </span>
       </div>
     </div>
-    <div id="2" tabindex="6" class="faq-item">
+    <div id="2"  class="faq-item">
       <div class="question">
         <h5 class="label">Faites vous des réparations sur des appareils numérique ?</h5>
         <span class="plus-icon">+</span>
@@ -154,7 +179,7 @@
         </span>
       </div>
     </div>
-    <div id="3" tabindex="6" class="faq-item">
+    <div id="3"  class="faq-item">
       <div class="question">
         <h5 class="label">Combien coûte une réparation ?</h5>
         <span class="plus-icon">+</span>
@@ -167,9 +192,9 @@
         </span>
       </div>
     </div>
-    <div id="4" tabindex="6" class="faq-item">
+    <div id="4"  class="faq-item">
       <div class="question">
-        <h5 class="label">Je n'ai pas la chance d'habiter à Nantes / Rezé. Puis-je vous envoyer mon appareil ? </h5>
+        <h5 class="label">Je n'ai pas la chance d'habiter à Nantes. Puis-je vous envoyer mon appareil ? </h5>
         <span class="plus-icon">+</span>
 
       </div>
@@ -179,7 +204,7 @@
         </span>
       </div>
     </div>
-    <div id="5" tabindex="6" class="faq-item">
+    <div id="5"  class="faq-item">
       <div class="question">
         <h5 class="label">P </h5>
         <span class="plus-icon">+</span>
