added tarif section

--- a/index.html
+++ b/index.html
@@ -80,43 +80,24 @@
         </div>
       </section>
     </main>
-    <div class="bandeau">
-      <div class="inner-bandeau">
-        <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
-        <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
-        <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
-        <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+    <div class="bandeau-wrap">
+      <div class="bandeau">
+        <div class="inner-bandeau">
+          <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+          <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+          <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+          <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+        </div>
       </div>
     </div>
 
-    <secion class="section-tarifs" id="tarif">
-      <h2 class="section-title">Tarifs</h2>
-      <div class="tarif-wrap">
-        <div class="item">
-          <div class="circle"><span class="price">30€</span></div>
-          <h3 class="item-title">Boitiers</h3>
-          <ul class="details">
-            <li class="items">Révision</li>
-            <li class="items">Ajustements de vitesses et de cellule</li>
-            <li class="items">Réglage de télémètre</li>
-            <li class="items">Nettoyage</li>
-            <li class="items">Changement des joints d'étanchéité +15€</li>
+    <section class="section-tarifs" id="tarif">
+      <h2 class="section-title reverse">Tarifs</h2>
+      <div class="tarifs-wrap">
 
-          </ul>
-        </div>
-
-        <div class="item">
-          <div class="circle"><span class="price">30€</span></div>
-          <h3 class="item-title">Objectif</h3>
-          <ul class="details">
-            <li class="items">Nettoyage</li>
-            <li class="items">Réglage de mise au point</li>
-            <li class="items">Nettoyage des lamelles gommées</li>
-            <li class="items">Élimination des champignons</li>
-          </ul>
-        </div>
       </div>
-    </secion>
+
+    </section>
 
     <section class="section-contact" id="contact">
       <h2 class="section-title">Contact</h2>
