--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="overlay"></div>
 
-  <header id="home" class="section-home">
+  <header id="home" class="section-home wrapper">
     <nav class="navbar">
       <a tabindex="2" href="#home">
         <svg class="logo-small" width="616" height="134" viewBox="0 0 616 134" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -68,7 +68,7 @@
   </header>
   <main id="main" >
 
-    <section class="section-cards">
+    <section class="section-cards wrapper">
       <div class="cards-wrap">
         <div class="card">
           <img src="assets/images/julien-1.jpg" srcset="assets/images/julien-1@2x.jpg 2x" class="photo-card"  alt="">
@@ -80,7 +80,7 @@
         </div>
       </section>
     </main>
-    <div class="bandeau-wrap">
+    <!-- <div class="bandeau-wrap">
       <div class="bandeau">
         <div class="inner-bandeau">
           <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
@@ -89,9 +89,9 @@
           <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <section class="section-tarifs" id="tarif">
+    <section class="section-tarifs wrapper" id="tarif">
       <h2 class="section-title reverse">Tarifs</h2>
       <div class="tarifs-wrap">
 
@@ -99,7 +99,7 @@
 
     </section>
 
-    <section class="section-contact" id="contact">
+    <section class="section-contact wrapper" id="contact">
       <h2 class="section-title">Contact</h2>
         <div class="contact-wrap">
 
