--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </header>
   <main id="main" >
 
-    <section class="section-cards wrapper">
+    <section tabindex="7" id="card" class="section-cards wrapper">
       <div class="cards-wrap">
         <div class="card">
           <img src="assets/images/julien-1.jpg" srcset="assets/images/julien-1@2x.jpg 2x" class="photo-card"  alt="">
@@ -91,7 +91,7 @@
       </div>
     </div> -->
 
-    <section class="section-tarifs wrapper" id="tarif">
+    <section tabindex="8" class="section-tarifs wrapper" id="tarif">
       <h2 class="section-title reverse">Tarifs</h2>
       <div class="tarifs-wrap">
 
@@ -122,7 +122,7 @@
               </svg>
 
 
-            <a  class="email bold link"  href=" mailto: minoltor@prontonmail.com"> minoltor@protonmail.com</a>
+            <a tabindex="9"  class="email bold link"  href=" mailto: minoltor@prontonmail.com"> minoltor@protonmail.com</a>
             <span class="adresse">Ou venez me voir dans mon bel atelier situé à<span class="bold"> Nantes.</span></span>
           </div>
 
