--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
       </section>
     </main>
-    <!-- <div class="bandeau-wrap">
+    <div class="bandeau-wrap">
       <div class="bandeau">
         <div class="inner-bandeau">
           <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
@@ -103,7 +103,7 @@
           <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <section tabindex="8" class="section-tarifs wrapper" id="tarif">
       <h2 class="section-title reverse">Tarifs</h2>
