--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon.png">
+  <link rel="icon" sizes="192x192" href="./assets/icons/android-chrome-192x192.png">
+  <link rel="icon" sizes="512x512" href="./assets/icons/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
+  <link rel="shortcut icon" href="./assets/icons/favicon.ico" type="image/x-icon">
+  <link rel="manifest" href="/site.webmanifest">
   <title>Minoltor</title>
 </head>
 <body>
@@ -93,17 +100,18 @@
           </p>
         </div>
       </section>
-    </main>
-    <div class="bandeau-wrap">
-      <div class="bandeau">
-        <div class="inner-bandeau">
-          <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
-          <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
-          <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
-          <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+      <div class="bandeau-wrap">
+        <div class="bandeau">
+          <div class="inner-bandeau">
+            <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+            <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+            <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+            <p class="panne"><span class="bold">Julien Mathé</span> vous sors du dédale de la panne. </p>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
+
 
     <section tabindex="8" class="section-tarifs wrapper" id="tarif">
       <h2 class="section-title reverse">Tarifs</h2>
