added a bit a seo

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </ul>
     </nav>
     <div class="title-wrap">
-
+    <h1>
       <svg class="title" width="616" height="134" viewBox="0 0 616 134" fill="none" xmlns="http://www.w3.org/2000/svg">
 
         <path class='m' d="M140.753 3.67503C129.432 3.65907 118.12 3.64311 106.809 3.67503C106.379 3.67503 105.779 4.05804 105.599 4.3852C104.808 5.81352 67.8336 81.6182 67.8336 81.6182L66.8235 81.6501C66.8235 81.6501 71.6341 5.94918 71.7141 3.70695H35.3694C23.5279 46.6204 11.7063 89.4779 -0.125244 132.343C-0.0852389 132.351 0.0147699 132.407 0.104782 132.407C8.08582 132.415 25.068 132.439 25.068 132.439C27.0783 124.587 49.1312 35.0661 49.1312 35.0661H50.2713L45.2907 132.391H57.5823L105.889 35.0582H107.149C107.149 35.0582 77.975 131.019 77.5449 132.367H105.469C117.31 89.4221 129.122 46.5805 140.933 3.75483C140.843 3.71493 140.793 3.68302 140.743 3.68302L140.753 3.67503Z" fill="currentColor"/>
@@ -81,6 +81,7 @@
         </clipPath>
       </defs>
     </svg>
+  </h1>
       <div class="subtitle-wrap">
         <div class="floating"></div>
         <h3  class="subtitle">Réparation et entretien <br> d'appareils photo <span class="bold">argentiques</span></h3>
@@ -240,7 +241,7 @@
 
     <div id="2"  class="faq-item">
       <div class="question">
-        <h5 class="label">Faites vous des réparations sur des appareils numérique ?</h5>
+        <span class="label">Faites vous des réparations sur des appareils numérique ?</span>
         <span class="plus-icon">+</span>
 
       </div>
@@ -254,7 +255,7 @@
     </div>
     <div id="3"  class="faq-item">
       <div class="question">
-        <h5 class="label">Combien coûte une réparation ?</h5>
+        <span class="label">Combien coûte une réparation ?</span>
         <span class="plus-icon">+</span>
 
       </div>
@@ -267,7 +268,7 @@
     </div>
     <div id="4"  class="faq-item">
       <div class="question">
-        <h5 class="label">Je n'ai pas la chance d'habiter à Nantes. Puis-je vous envoyer mon appareil ? </h5>
+        <span class="label">Je n'ai pas la chance d'habiter à Nantes. Puis-je vous envoyer mon appareil ? </span>
         <span class="plus-icon">+</span>
 
       </div>
@@ -279,7 +280,7 @@
     </div>
     <div id="5"  class="faq-item">
       <div class="question">
-        <h5 class="label">P </h5>
+        <span class="label">P </span>
         <span class="plus-icon">+</span>
 
       </div>
