changed theme color

--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
                 <span class="line"></span>
               </li>
               <li dir="ltr" class="list-item">
-                <span class="service">Changement des joints d\'étenchéité</span>
+                <span class="service">Changement des joints d'étenchéité</span>
                 <span class="price bold">45 - 60 €</span>
                 <span class="line"></span>
               </li>
               <li dir="ltr" class="list-item">
-                <span class="service">Révision compléte</span>
+                <span class="service">Révision complète</span>
                 <span class="price bold">130 - 180€</span>
                 <span class="line"></span>
               </li>
@@ -224,11 +224,6 @@
               <li dir="ltr" class="list-item">
                 <span class="service">Révision</span>
                 <span class="price bold">80 - 130€</span>
-                <span class="line"></span>
-              </li>
-              <li dir="ltr" class="list-item">
-                <span class="service">Révision compléte</span>
-                <span class="price bold">130 - 180€</span>
                 <span class="line"></span>
               </li>
             </ul>
