added google meta tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="title" content="Minoltor">
     <meta name="description"
       content="Réparation et entretien d'appareils photos argentiques à Nantes">
-
+    <meta name="google-site-verification" content="fpK2chhShKr96yy4kH4AiME-6Mhwz29TuE9WVCCliec" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://minoltor.fr/">
     <meta property="og:title" content="Minoltor">
