added .fr to the paths

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
       content="https://minoltor.fr/assets/images/share/share.png">
     <link rel="stylesheet" href="./source/style.min.css">
     <link rel="apple-touch-icon" sizes="180x180"
-      href="https://minoltor/assets/icons/apple-touch-icon.png">
+      href="https://minoltor.fr/assets/icons/apple-touch-icon.png">
     <link rel="icon" sizes="192x192"
-      href="https://minoltor/assets/icons/android-chrome-192x192.png">
+      href="https://minoltor.fr/assets/icons/android-chrome-192x192.png">
     <link rel="icon" sizes="512x512"
-      href="https://minoltor/assets/icons/android-chrome-512x512.png">
+      href="https://minoltor.fr/assets/icons/android-chrome-512x512.png">
     <link rel="icon" type="image/png" sizes="32x32"
-      href="https://minoltor/assets/icons/favicon-32x32.png">
+      href="https://minoltor.fr/assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
-      href="https://minoltor/assets/icons/favicon-16x16.png">
-    <link rel="shortcut icon" href="https://minoltor/assets/icons/favicon.ico"
+      href="https://minoltor.fr/assets/icons/favicon-16x16.png">
+    <link rel="shortcut icon" href="https://minoltor.fr/assets/icons/favicon.ico"
       type="image/x-icon">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="canonical" href="https://www.minoltor.fr">
