--- a/index.html
+++ b/index.html
@@ -3,40 +3,29 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Minoltor">
-    <meta name="description"
-      content="Réparation et entretien d'appareils photos argentiques à Nantes">
+    <meta name="title" content="Minoltor - Réparation et entretien d'appareils photos argentiques">
+    <meta name="description" content="Minoltor, est l'atelier de réparation et d'entretien de matériel argentique de Julien Mathé, basé à Nantes. Après des années à arpenter le monde fascinant des appareils photos argentiques, en chinant les perles rares et les manuels anciens, entrer dans le dédale des mécanismes s'est imposé comme une évidence.">
     <meta name="google-site-verification" content="fpK2chhShKr96yy4kH4AiME-6Mhwz29TuE9WVCCliec" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://minoltor.fr/">
-    <meta property="og:title" content="Minoltor">
-    <meta property="og:description"
-      content="Minoltor - Réparation et entretien d'appareils photos argentiques à Nantes">
-    <meta property="og:image"
-      content="https://minoltor.fr/assets/images/share/share.png">
+    <meta property="og:title" content="Minoltor - Réparation et entretien d'appareils photos argentiques">
+    <meta property="og:description" content="Minoltor, est l'atelier de réparation et d'entretien de matériel argentique de Julien Mathé, basé à Nantes. Après des années à arpenter le monde fascinant des appareils photos argentiques, en chinant les perles rares et les manuels anciens, entrer dans le dédale des mécanismes s'est imposé comme une évidence.">
+    <meta property="og:image" content="https://minoltor.fr/assets/images/share/share.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://minoltor.fr/">
-    <meta property="twitter:title" content="Minoltor">
-    <meta property="twitter:description"
-      content="Réparation et entretien d'appareils photos argentiques à Nantes ">
-    <meta property="twitter:image"
-      content="https://minoltor.fr/assets/images/share/share.png">
+    <meta property="twitter:title" content="Minoltor - Réparation et entretien d'appareils photos argentiques">
+    <meta property="twitter:description" content="Minoltor, est l'atelier de réparation et d'entretien de matériel argentique de Julien Mathé, basé à Nantes. Après des années à arpenter le monde fascinant des appareils photos argentiques, en chinant les perles rares et les manuels anciens, entrer dans le dédale des mécanismes s'est imposé comme une évidence.">
+    <meta property="twitter:image" content="https://minoltor.fr/assets/images/share/share.png">
     <link rel="stylesheet" href="./source/style.min.css">
-    <link rel="apple-touch-icon" sizes="180x180"
-      href="https://minoltor.fr/assets/icons/apple-touch-icon.png">
-    <link rel="icon" sizes="192x192"
-      href="https://minoltor.fr/assets/icons/android-chrome-192x192.png">
-    <link rel="icon" sizes="512x512"
-      href="https://minoltor.fr/assets/icons/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="32x32"
-      href="https://minoltor.fr/assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16"
-      href="https://minoltor.fr/assets/icons/favicon-16x16.png">
-    <link rel="shortcut icon" href="https://minoltor.fr/assets/icons/favicon.ico"
-      type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://minoltor.fr/assets/icons/apple-touch-icon.png">
+    <link rel="icon" sizes="192x192" href="https://minoltor.fr/assets/icons/android-chrome-192x192.png">
+    <link rel="icon" sizes="512x512" href="https://minoltor.fr/assets/icons/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://minoltor.fr/assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://minoltor.fr/assets/icons/favicon-16x16.png">
+    <link rel="shortcut icon" href="https://minoltor.fr/assets/icons/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="canonical" href="https://www.minoltor.fr">
-    <title>Minoltor</title>
+    <title>Minoltor - Réparation et entretien d'appareils photos argentiques</title>
   </head>
   <body>
     <div class="overlay"></div>
