--- a/index.html
+++ b/index.html
@@ -271,8 +271,7 @@
             </div>
             <div class="reponse-block">
               <span class="content">
-                <span class="reponse">Le prix d'une réparation dépends du type
-                  de réparation. Référez vous à notre grille tarifaire.
+                <span class="reponse">Référez-vous à notre grille tarifaire ou contactez-nous par e-mail si votre réparation est plus spécifique.
                 </span>
               </span>
             </div>
@@ -286,22 +285,7 @@
             </div>
             <div class="reponse-block">
               <span class="content">
-                <span class="reponse">Pour le moment, nous ne pouvons pas
-                  assurer la récéption ni la livraison d'appareils photo par la
-                  poste. La remise du materiel se fait en main propre.
-                  (Seulement à nantes?)</span>
-              </span>
-            </div>
-          </div>
-          <div id="4" class="faq-item">
-            <div class="question">
-              <span class="label">P </span>
-              <span class="plus-icon">+</span>
-
-            </div>
-            <div class="reponse-block">
-              <span class="content">
-                <span class="reponse">Ça va bien merci i 2.</span>
+                <span class="reponse">Oui, vous pouvez nous envoyer votre appareil par Mondial Relay ou La Poste. Pour plus de précision, contactez nous par e-mail.</span>
               </span>
             </div>
           </div>
