updated eamail adress

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             alt="Numéro de téléphone de Minoltor">
         </a>
         <a tabindex class="email bold link"
-          href="mailto:minoltor@prontonmail.com"> minoltor@protonmail.com</a>
+          href="mailto:minoltor@protonmail.com"> minoltor@protonmail.com</a>
       </div>
     </section>
 
